--- a/4-0 File Paths/Folder0/index.html
+++ b/4-0 File Paths/Folder0/index.html
@@ -1,10 +1,11 @@
-<h1>All the Animals</h1>
-<h2>Rabbit:</h2>
-
-<h2>Cat:</h2>
-
-<h2>Dog:</h2>
-
-<h2>Fish:</h2>
-
-<h2>Bird:</h2>
+<h1>Vários animais</h1>
+<h2>Coelho:</h2>
+<img src="./rabbit.png" alt="Coelho">
+<h2>Gato:</h2>
+<img src="./Folder3/cat.png" alt="Gato">
+<h2>DogCachorro:</h2>
+<img src="../dog.png" alt="Cachorro">
+<h2>Peixe:</h2>
+<img src="../Folder1/fish.png" alt="Peixe">
+<h2>Pássaro:</h2>
+<img src="../Folder1/Folder2/bird.png" alt="Pássaro">
