--- a/4-3 HTML Porfolio Project/index.html
+++ b/4-3 HTML Porfolio Project/index.html
@@ -9,14 +9,14 @@
 
 <body>
     <h1>Walisson Portfólio</h1>
-    <h3>Aspirante à Dev Web</h3>
+    <h2>Aspirante à Dev Web</h2>
     <hr>
     <div>
-        <a href="public/movie-ranking.html">Filmes Favoritos</a><br>
+        <h3><a href="public/movie-ranking.html">Filmes Favoritos</a></h3>
         <img src="assets/images/ranking-filmes.png" height="200px" alt="img-projeto-filmes">
     </div>
     <div>
-        <a href="public/birthday-invite.html">Convite de Aniversário</a><br>
+        <h3><a href="public/birthday-invite.html">Convite de Aniversário</a></h3>        
         <img src="assets/images/convite-aniversario.png" height="200px" alt="img-projeto-convite">
     </div>
     <hr>
