--- a/4-1 Webpages/index.html
+++ b/4-1 Webpages/index.html
@@ -1,5 +1,5 @@
-<h1>Welcome to My Website!</h1>
+<h1>Bem vindo ao meu site!</h1>
 <a href="./public/about.html"><img src="./assets/images/cat.png" alt="Cat"></a>
 
 <hr />
-<a href="./public/contact.html">Contact Me</a>
+<a href="./public/contact.html">Entre em contato</a>
