--- a/7.3 CSS Flag Project/index.html
+++ b/7.3 CSS Flag Project/index.html
@@ -5,19 +5,55 @@
   <meta charset="UTF-8">
   <title>CSS Flag Project</title>
   <style>
-    /* Write your CSS Code here */
+    .flag {
+      height: 600px;
+      width: 900px;
+      background-color: #ce1126;
+      position: relative;
+    }
+
+    .flag > div {
+      background-color: #002868;
+      height: 300px;
+      width: 100%;
+      position: absolute;
+      top: 150px;
+    }
+
+    .flag > div > div {
+      background-color: white;
+      height: 200px;
+      width: 200px;
+      border-radius: 50%;
+      position: relative;
+      top: 50px;
+      left: 350px;
+    }
+
+    p {
+      margin: 0;
+      font-size: 5rem;
+      text-align: center;
+      color: white;
+    }
+
+    .flag div  div  p {
+      color: black;
+    }
     
   </style>
 </head>
 
 <!-- 
-  IMPORTANT! Do not change any HTML
-Don't add any classes/ids/elements 
-Use what you know about combining selectors 
-and CSS specificity instead.
-Hint 1: The flag is 900px by 600px and the circle is 200px by 200px.
-Hint 2: You can use CSS inspection to get the colors from
+  IMPORTANTE! Não altere nenhum HTML
+Não adicione nenhuma classe/ids/elementos
+Use o que você sabe sobre combinar seletores
+e especificidade CSS em vez disso.
+Dica 1: A bandeira tem 900px por 600px e o círculo tem 200px por 200px.
+Dica 2: Você pode usar a inspeção CSS para obter as cores de
 https://appbrewery.github.io/flag-of-laos/
+Vermelho -> #ce1126 
+Azul -> #002868
 -->
 
 <body>
