--- a/Seção 9 - Flexbox/9.4 Flexbox Pricing Table Project/index.html
+++ b/Seção 9 - Flexbox/9.4 Flexbox Pricing Table Project/index.html
@@ -13,9 +13,26 @@
         font-family: "Sono", sans-serif;
       }
 
-      /* Hint: What can you do with a media query and flexbox? */
-      @media (max-width: 1250px) {
+      li {
+        list-style-type: none;
       }
+
+      .pricing-container {
+        display: flex;
+        gap: 25px;
+        margin-top: 15rem;
+        justify-content: center;
+      }
+
+      .pricing-plan {
+        background-color: #FBFBFB;
+        border: 5px solid #E8F9FF;
+        flex-basis: 40vh;
+        justify-items: center;
+        padding: 20px;
+      }
+
+      
     </style>
   </head>
 
