--- a/Seção 9 - Flexbox/9.4 Flexbox Pricing Table Project/index.html
+++ b/Seção 9 - Flexbox/9.4 Flexbox Pricing Table Project/index.html
@@ -1,114 +1,181 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Flexbox Pricing Table</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
-    <style>
-      body {
-        font-family: "Sono", sans-serif;
-        background-color: #DEE5D4;
-      }
 
-      ul {
-        list-style-type: none;
-        margin: 0 5px;
-        padding: 0;
-      }
+<head>
+  <title>Flexbox Pricing Table</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Sono:wght@400;700&display=swap" rel="stylesheet" />
+  <style>
+    body {
+      font-family: "Sono", sans-serif;
+      background-color: #DEE5D4;
+    }
 
+    ul {
+      list-style-type: none;
+      margin: 0 5px;
+      padding: 0;
+    }
+
+    .pricing-container {
+      display: flex;
+      gap: 25px;
+      margin-top: 15rem;
+      justify-content: center;
+    }
+
+    .pricing-plan {
+      background-color: #E8F9FF;
+      border: 5px solid #C4D9FF;
+      border-radius: 10px;
+      flex-basis: 45vh;
+      justify-items: center;
+      padding: 20px;
+      transition: 0.4s;
+    }
+
+    .pricing-plan:hover {
+      transform: scale(1.10);
+    }
+
+    .plan-title {
+      font-size: 1.4rem;
+    }
+
+    .plan-price {
+      font-size: 2rem;
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .plan-features {
+      font-size: 1.1rem;
+    }
+
+    .plan-button {
+      padding: 3px;
+      font-size: 0.9rem;
+      font-weight: bold;
+      color: #F1F0E8;
+      background-color: #FA812F;
+      border-color: #F29F58;
+      border-radius: 6px;
+      width: 75px;
+      margin-top: 10px;
+      transition: 0.1s;
+    }
+
+    .plan-button:hover {
+      transform: scale(1.05);
+    }
+
+    @media (min-width: 319px) and (max-width: 480px) {
       .pricing-container {
         display: flex;
-        gap: 25px;
-        margin-top: 15rem;
+        flex-direction: column;
         justify-content: center;
+        gap: 50px;
+        margin-top: 4rem;
       }
 
       .pricing-plan {
-        flex-direction: column;
-        background-color: #E8F9FF;
-        border: 5px solid #C4D9FF;
-        border-radius: 10px;
-        flex-basis: 45vh;
-        justify-items: center;
-        padding: 20px;
-        transition: 0.4s;
-      }
-
-      .pricing-plan:hover {
-        transform: scale(1.10);
+        width: 80%;
+        flex-basis: 73vh;
+        margin-left: 7.7%;
       }
 
       .plan-title {
-        font-size: 1.4rem;
+        font-size: 5.4rem;
       }
 
       .plan-price {
-        font-size: 2rem;
-        font-weight: bold;
-        margin-bottom: 5px;
+        font-size: 6rem;
       }
 
       .plan-features {
-        font-size: 1.1rem;
+        font-size: 3rem;
       }
 
       .plan-button {
-        padding: 3px;
-        font-size: 0.9rem;
-        font-weight: bold;
-        color: #F1F0E8;
-        background-color: #FA812F;
-        border-color: #F29F58;
-        border-radius: 5px;
-        width: 75px;
-        margin-top: 10px;
-        transition: 0.1s;
+        padding: 10px;
+        width: 170px;
+        border-radius: 6px;
+        font-size: 2.2rem;
+      }
+    }
+
+    @media (min-width: 481px) and (max-width: 1200px) {
+      .pricing-container {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        gap: 40px;
+        margin-top: 4rem;
+        margin-bottom: 80px;
       }
 
-      .plan-button:hover {
-        transform: scale(1.05);
+      .pricing-plan {
+        width: 80%;
+        flex-basis: 36vh;
+        margin-left: 7%;
       }
 
-      
-    </style>
-  </head>
+      .plan-title {
+        font-size: 5rem;
+      }
 
-  <body>
-    <div class="pricing-container">
-      <div class="pricing-plan">
-        <div class="plan-title">Básico</div>
-        <div class="plan-price">R$9.99/mês</div>
-        <ul class="plan-features">
-          <li>✅ 10GB Espaço</li>
-          <li>✅ 1 Usuários</li>
-          <li>🚫 Suporte</li>
-        </ul>
-        <button class="plan-button">Assinar</button>
-      </div>
-      <div class="pricing-plan">
-        <div class="plan-title">Padrão</div>
-        <div class="plan-price">R$19.99/mês</div>
-        <ul class="plan-features">
-          <li>✅ 50GB Espaço</li>
-          <li>✅ 5 Usuários</li>
-          <li>✅ Phone &amp; Email Suporte</li>
-        </ul>
-        <button class="plan-button">Assinar</button>
-      </div>
-      <div class="pricing-plan">
-        <div class="plan-title">Premium</div>
-        <div class="plan-price">R$49.99/mês</div>
-        <ul class="plan-features">
-          <li>✅ 100GB Espaço</li>
-          <li>✅ 10 Usuários</li>
-          <li>✅ 24/7 Suporte</li>
-        </ul>
-        <button class="plan-button">Assinar</button>
-      </div>
+      .plan-price {
+        font-size: 5.6rem;
+      }
+
+      .plan-features {
+        font-size: 2.5rem;
+      }
+
+      .plan-button {
+        padding: 5px;
+        width: 140px;
+        border-radius: 6px;
+        font-size: 1.8rem;
+      }
+    }
+  </style>
+</head>
+
+<body>
+  <div class="pricing-container">
+    <div class="pricing-plan">
+      <div class="plan-title">Básico</div>
+      <div class="plan-price">R$9.99/mês</div>
+      <ul class="plan-features">
+        <li>✅ 10GB Espaço</li>
+        <li>✅ 1 Usuários</li>
+        <li>🚫 Suporte</li>
+      </ul>
+      <button class="plan-button">Assinar</button>
     </div>
-  </body>
+    <div class="pricing-plan">
+      <div class="plan-title">Padrão</div>
+      <div class="plan-price">R$19.99/mês</div>
+      <ul class="plan-features">
+        <li>✅ 50GB Espaço</li>
+        <li>✅ 5 Usuários</li>
+        <li>✅ Phone &amp; Email Suporte</li>
+      </ul>
+      <button class="plan-button">Assinar</button>
+    </div>
+    <div class="pricing-plan">
+      <div class="plan-title">Premium</div>
+      <div class="plan-price">R$49.99/mês</div>
+      <ul class="plan-features">
+        <li>✅ 100GB Espaço</li>
+        <li>✅ 10 Usuários</li>
+        <li>✅ 24/7 Suporte</li>
+      </ul>
+      <button class="plan-button">Assinar</button>
+    </div>
+  </div>
+</body>
+
 </html>
