--- a/Seção 10 - Grid/10.2 Grid Placement/exercise2.html
+++ b/Seção 10 - Grid/10.2 Grid Placement/exercise2.html
@@ -27,7 +27,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
     }
 
     .cowboy {
@@ -38,9 +37,7 @@
     .astronaut {
       background-color: #03989E;
       order: 1;
-
-      /* TODO: Make the astronaut box look like the goal2 image. */
-
+      grid-column: span 2;
     }
   </style>
 </head>
