--- a/Seção 10 - Grid/10.2 Grid Placement/exercise3.html
+++ b/Seção 10 - Grid/10.2 Grid Placement/exercise3.html
@@ -27,7 +27,6 @@
       display: flex;
       align-items: center;
       justify-content: center;
-
     }
 
     .cowboy {
@@ -45,6 +44,7 @@
       background-color: #E58331;
       /* TODO: Make the book div look like 
       the goal3 image using grid-row. */
+      grid-row: span 2;
     }
   </style>
 </head>
